--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "license": "ISC",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
+    "@nomiclabs/hardhat-etherscan": "^3.1.6",
     "hardhat": "^2.12.7"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "hardhat-gas-reporter": "^1.0.9"
   }
 }
